WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191514
ProcessPoolConfiguration::copy() doesn’t copy m_customWebContentServiceBundleIdentifier
https://bugs.webkit.org/show_bug.cgi?id=191514
Summary
ProcessPoolConfiguration::copy() doesn’t copy m_customWebContentServiceBundle...
mitz
Reported
2018-11-11 10:33:15 PST
ProcessPoolConfiguration::copy() doesn’t copy m_customWebContentServiceBundleIdentifier
Attachments
Copy m_customWebContentServiceBundleIdentifier
(11.96 KB, patch)
2018-11-11 11:00 PST
,
mitz
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2018-11-11 11:00:26 PST
Created
attachment 354507
[details]
Copy m_customWebContentServiceBundleIdentifier
EWS Watchlist
Comment 2
2018-11-11 11:03:16 PST
Attachment 354507
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/WKProcessPoolConfiguration.mm:43: Extra space in capture list. [whitespace/brackets] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2018-11-11 11:33:15 PST
Comment on
attachment 354507
[details]
Copy m_customWebContentServiceBundleIdentifier r=me
WebKit Commit Bot
Comment 4
2018-11-11 12:00:09 PST
Comment on
attachment 354507
[details]
Copy m_customWebContentServiceBundleIdentifier Clearing flags on attachment: 354507 Committed
r238076
: <
https://trac.webkit.org/changeset/238076
>
WebKit Commit Bot
Comment 5
2018-11-11 12:00:11 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-11-11 12:03:56 PST
<
rdar://problem/45975379
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug