ProcessPoolConfiguration::copy() doesn’t copy m_customWebContentServiceBundleIdentifier https://bugs.webkit.org/show_bug.cgi?id=191514

Reviewed by Geoffrey Garen.

Source/WebKit:

Test: WebKitCocoa/WKProcessPoolConfiguration.mm

* UIProcess/API/APIProcessPoolConfiguration.cpp:
(API::ProcessPoolConfiguration::copy): Copy m_customWebContentServiceBundleIdentifier.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/WKProcessPoolConfiguration.mm: Added.
(TEST):


Canonical link: https://commits.webkit.org/206290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238076 268f45cc-cd09-0410-ab3c-d52691b4dbfc